# music-generation-tools

./: .gitignore  README.md  data.dvc  main.py  pyproject.toml
stem-splitting/: README.md  spleeter.ipynb
wav2midi/: basic-pitch.ipynb  main.py  pyproject.toml  requirements.txt
